[gd_scene load_steps=32 format=2]

[ext_resource path="res://Player/ActualPlayer/Sprites/24fps_MC.png" type="Texture" id=1]
[ext_resource path="res://Player/ActualPlayer/States/debug/stateLabel.gd" type="Script" id=2]
[ext_resource path="res://Player/ActualPlayer/playerStateMachine.gd" type="Script" id=3]
[ext_resource path="res://Player/ActualPlayer/States/motion/ground/idle.gd" type="Script" id=4]
[ext_resource path="res://Player/ActualPlayer/playerbody.gd" type="Script" id=5]
[ext_resource path="res://Player/ActualPlayer/States/motion/ground/run.gd" type="Script" id=6]
[ext_resource path="res://Player/ActualPlayer/States/motion/air/jump.gd" type="Script" id=7]
[ext_resource path="res://Player/ActualPlayer/States/motion/air/fall.gd" type="Script" id=8]
[ext_resource path="res://Player/ActualPlayer/Scarf/scarf.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/ActualPlayer/States/motion/air/hook.gd" type="Script" id=10]
[ext_resource path="res://Player/ActualPlayer/Sfx/jumpv3.wav" type="AudioStream" id=11]
[ext_resource path="res://Player/ActualPlayer/States/motion/ground/slide.gd" type="Script" id=12]
[ext_resource path="res://Player/ActualPlayer/attack_ground.gd" type="Script" id=13]
[ext_resource path="res://Player/ActualPlayer/States/motion/ground/wallslide.gd" type="Script" id=14]

[sub_resource type="Animation" id=14]
resource_name = "attack_air"
length = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 1429, 1, 32, 36 ), Rect2( 1463, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "attack_ground"
length = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 1429, 1, 32, 36 ), Rect2( 1463, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 1429, 1, 32, 36 ), Rect2( 1463, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 1361, 1, 32, 36 ), Rect2( 1395, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.32
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 1, 1, 32, 36 ), Rect2( 35, 1, 32, 36 ), Rect2( 69, 1, 32, 36 ), Rect2( 103, 1, 32, 36 ), Rect2( 137, 1, 32, 36 ), Rect2( 171, 1, 32, 36 ), Rect2( 205, 1, 32, 36 ), Rect2( 239, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.61
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.09, 0.13, 0.17, 0.21, 0.25, 0.29, 0.33, 0.37, 0.41, 0.45, 0.49, 0.53, 0.57 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 273, 1, 32, 36 ), Rect2( 307, 1, 32, 36 ), Rect2( 341, 1, 32, 36 ), Rect2( 375, 1, 32, 36 ), Rect2( 409, 1, 32, 36 ), Rect2( 443, 1, 32, 36 ), Rect2( 477, 1, 32, 36 ), Rect2( 511, 1, 32, 36 ), Rect2( 545, 1, 32, 36 ), Rect2( 579, 1, 32, 36 ), Rect2( 613, 1, 32, 36 ), Rect2( 647, 1, 32, 36 ), Rect2( 681, 1, 32, 36 ), Rect2( 715, 1, 32, 36 ), Rect2( 749, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.09, 0.13, 0.17, 0.21, 0.25, 0.29, 0.33, 0.37, 0.41, 0.45, 0.49, 0.53, 0.57 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 1293, 1, 32, 36 ), Rect2( 1327, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("verletChain:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.08786, -15.6908 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("jump")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
resource_name = "land"
length = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 1429, 1, 32, 36 ), Rect2( 1463, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.61
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.13, 0.17, 0.21, 0.25, 0.29, 0.33, 0.37, 0.41, 0.45, 0.49, 0.53, 0.57 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 783, 1, 32, 36 ), Rect2( 817, 1, 32, 36 ), Rect2( 851, 1, 32, 36 ), Rect2( 885, 1, 32, 36 ), Rect2( 919, 1, 32, 36 ), Rect2( 953, 1, 32, 36 ), Rect2( 987, 1, 32, 36 ), Rect2( 1021, 1, 32, 36 ), Rect2( 1055, 1, 32, 36 ), Rect2( 1089, 1, 32, 36 ), Rect2( 1123, 1, 32, 36 ), Rect2( 1157, 1, 32, 36 ), Rect2( 1191, 1, 32, 36 ), Rect2( 1225, 1, 32, 36 ), Rect2( 1259, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.13, 0.17, 0.21, 0.25, 0.29, 0.33, 0.37, 0.41, 0.45, 0.49, 0.53, 0.57 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("verletChain:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 8 ), Vector2( 0, 1 ), Vector2( 0, 8 ), Vector2( 0, 6 ), Vector2( 0, 8 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "slide"
length = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 1429, 1, 32, 36 ), Rect2( 1463, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "wallslide"
length = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot/sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 1429, 1, 32, 36 ), Rect2( 1463, 1, 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bodyPivot/sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.19 ),
"transitions": PoolRealArray( 1.8025, 1 ),
"update": 0,
"values": [ Vector2( 0.95, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "land"
tracks/0/type = "value"
tracks/0/path = NodePath("bodyPivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.392292, 1 ),
"update": 0,
"values": [ Vector2( 1.06, 0.83 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 30.0
height = 65.0

[sub_resource type="CapsuleShape2D" id=10]
radius = 30.0
height = 0.0

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0 ), 0.0, 1.17104, 0, 0, Vector2( 1, 1 ), 0.938576, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 30, 17.889 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 2, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="verletChain" parent="." instance=ExtResource( 9 )]
position = Vector2( 4.08786, -15.6908 )
scale = Vector2( 8, 4 )
GRAVITY = 20.0
RESISTANCE = 0.75
CHAIN_LINK_LENGTH = 6.5

[node name="bodyPivot" type="Position2D" parent="."]

[node name="sprite" type="Sprite" parent="bodyPivot"]
position = Vector2( -2, 0 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1463, 1, 32, 36 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_air = SubResource( 14 )
anims/attack_ground = SubResource( 13 )
anims/fall = SubResource( 1 )
anims/hover = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/idle_continious = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/land = SubResource( 6 )
anims/run_continious = SubResource( 7 )
anims/slide = SubResource( 8 )
anims/wallslide = SubResource( 17 )

[node name="AnimationPlayerFx" type="AnimationPlayer" parent="."]
anims/jump = SubResource( 15 )
anims/land = SubResource( 16 )

[node name="bodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( -1, 9 )
shape = SubResource( 9 )

[node name="slideCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 42 )
shape = SubResource( 10 )
disabled = true

[node name="states" type="Node" parent="."]
script = ExtResource( 3 )
START_STATE = NodePath("idle")

[node name="slide" type="Node" parent="states"]
script = ExtResource( 12 )
attachment_curve = SubResource( 11 )

[node name="idle" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="jump" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="run" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="fall" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="hook" type="Node" parent="states"]
script = ExtResource( 10 )

[node name="attack" type="Node" parent="states"]
script = ExtResource( 13 )

[node name="wallslide" type="Node" parent="states"]
script = ExtResource( 14 )

[node name="stateNameDisplay" type="Label" parent="."]
margin_left = -43.0
margin_top = -92.0
margin_right = -5.0
margin_bottom = -9.0
rect_scale = Vector2( 2, 2 )
text = "Test
"
align = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="slideRay" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
scale = Vector2( 1, -1 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="slideArea2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="slideArea2D"]
position = Vector2( -1, -5 )
shape = SubResource( 12 )

[node name="wallRaycasts" type="Node2D" parent="."]

[node name="leftSide" type="Node2D" parent="wallRaycasts"]
position = Vector2( -25, 0 )

[node name="leftside1" type="RayCast2D" parent="wallRaycasts/leftSide"]
position = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 4

[node name="leftside2" type="RayCast2D" parent="wallRaycasts/leftSide"]
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 4

[node name="rightSide" type="Node2D" parent="wallRaycasts"]
position = Vector2( 25, 0 )

[node name="rightside1" type="RayCast2D" parent="wallRaycasts/rightSide"]
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 4

[node name="rightside2" type="RayCast2D" parent="wallRaycasts/rightSide"]
position = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 4
[connection signal="state_changed" from="states" to="stateNameDisplay" method="_on_states_state_changed"]
[connection signal="state_changed" from="states" to="." method="_on_states_state_changed"]
[connection signal="body_entered" from="slideArea2D" to="." method="_on_slideArea2D_body_entered"]
[connection signal="body_exited" from="slideArea2D" to="." method="_on_slideArea2D_body_exited"]
